--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,15 +4,27 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="X-UA-Compatable" content="IE=edge">
-    <!-- <meta name="theme-color" content="#4d809b"> -->
+    <meta name="theme-color" content="#0a1922">
     {{ .Hugo.Generator }}
 
-    <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Merriweather:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="/css/main.css">
 
-    <title>{{ .Title }}</title>
+    <script src="https://use.fontawesome.com/09b775947d.js"></script>
+
+    <title>{{ .Title }} - {{ .Site.Title }}</title>
+
+    {{ if .RSSLink }}
+      <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
+    {{ end }}
   </head>
   <body>
+    {{ block "header" . }}
+      {{ partial "header" . }}
+    {{ end }}
     {{ block "content" . }}{{ end }}
+    {{ block "footer" . }}
+      {{ partial "footer" . }}
+    {{ end }}
+    <script src="/js/main.js"></script>
   </body>
 </html>
