--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,4 +1,5 @@
-body
-  // font-family: 'Didact Gothic', sans-serif
-  font-family: 'Merriweather', serif
-  font-size: 1rem
+@import "../node_modules/bulma/sass/utilities/initial-variables"
+@import overrides
+@import "../node_modules/bulma/bulma"
+
+@import scientific
