--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,3 +1,5 @@
-<header>
-  {{ partial "navigation" . }}
+<header class="hero is-primary">
+  <div class="hero-head">
+    {{ partial "navigation" . }}
+  </div>
 </header>
