--- a/sass/_scientific.sass
+++ b/sass/_scientific.sass
@@ -1,1 +1,10 @@
 @import components/all
+
+// Make footer always at bottom
+body
+  display: flex
+  min-height: 100vh
+  flex-direction: column
+
+main
+  flex: 1
