Reimplamented all old features, minor bug-fixes

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -23,7 +23,7 @@
     {{ end }}
     {{ block "content" . }}{{ end }}
     {{ block "footer" . }}
-      {{ partial "footer" . }}
+      {{ partialCached "footer" . }}
     {{ end }}
     <script src="/js/main.js"></script>
   </body>
