--- a/sass/_scientific.sass
+++ b/sass/_scientific.sass
@@ -8,3 +8,9 @@ body
 
 main
   flex: 1
+
+// Fix FontAwesome lists for content class
+.content .fa-ul
+  list-style: none
+  & i
+    font-size: 18px
