--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -4,11 +4,9 @@
       <h1 class="title is-2">{{ .Title }}</h1>
       <h3 class="subtitle is-4">{{ .Params.subtitle | markdownify }}</h3>
       <div class="content">{{ .Content }}</div>
-      <div class="columns is-multiline">
-        {{ range where .Site.RegularPages "Section" "member" }}
-          {{ .Render "list" }}
-        {{ end }}
-      </div>
+      {{ range where .Site.RegularPages "Section" .Page.Section }}
+        {{ .Render "li" }}
+      {{ end }}
     </div>
   </main>
 {{ end }}
