--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -1,7 +1,7 @@
 <div class="container">
   <nav class="navbar is-transparent is-bold">
     <div class="navbar-brand">
-      <a class="navbar-item" href="{{ "/" | absLangURL }}">
+      <a class="navbar-item" href="{{ "/" | relLangURL }}">
         <span class="icon"><i class="fa fa-rocket"></i></span>&nbsp;SPACE
       </a>
 
