--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,5 +1,5 @@
 {{ define "content" }}
-<section class="section">
+<main class="section">
   <div class="container">
     <h2 class="title is-1">
       404 (╯°□°）╯︵ ┻━┻
@@ -14,5 +14,5 @@
       Okay, try this page: <a href="{{ $.Site.BaseURL }}">{{ $.Site.BaseURL }}</a>
     </div>
   </div>
-</section>
+</main>
 {{ end }}
