Added custom icons for projects

--- a/layouts/partials/current_projects.html
+++ b/layouts/partials/current_projects.html
@@ -9,7 +9,7 @@
           <div class="column is-half">
             <div class="media">
               <div class="media-left">
-                <span class="icon is-large"><i class="fa fa-search"></i></span>
+                <span class="icon is-large"><i class="fa fa-{{ .icon | default "book" }}"></i></span>
               </div>
               <div class="media-content">
                 <div class="content">
