--- a/layouts/member/single.html
+++ b/layouts/member/single.html
@@ -69,7 +69,7 @@
                 <div class="card-content">
                   <div class="media">
                     <div class="media-left">
-                      <span class="icon is-large"><i class="fa fa-search"></i></span>
+                      <span class="icon is-large"><i class="fa fa-{{ .icon | default "book" }}"></i></span>
                     </div>
                     <div class="media-content">
                       <div class="content">
