Added Hugo and Scientific references. Removed borders from projects list
Projects page uses the same style as home page for listing latest
projects. Old cards removed to add more similatiry with Blog page.

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -9,10 +9,10 @@
           <div class="level-item">
             <div>
               <p>
-                &copy; {{ .Site.Params.initialYear }} &mdash; {{ now.Year }} <a href="{{ "/" | absLangURL }}">{{ .Site.Title }}</a>.
+                &copy; {{ .Site.Params.initialYear }} &mdash; {{ now.Year }} <a href="{{ "/" | absLangURL }}">{{ .Site.Title }}</a>
               </p>
-              <p class="is-size-6">
-                Developed by <a href="https://leonidboykov.com">Leonid Boykov</a>
+              <p class="is-size-7 has-text-grey-light">
+                Developed by <a href="https://leonidboykov.com">Leonid Boykov</a>. Powered by <a href="https://gohugo.io">Hugo</a> and <a href="https://github.com/leonidboykov/hugo-scientific-theme">Scientific</a>
               </p>
             </div>
           </div>
